--- a/Curator/MainWindow.xaml
+++ b/Curator/MainWindow.xaml
@@ -4,9 +4,22 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Curator"
+        xmlns:controls="clr-namespace:Curator.Controls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" DataContext="{Binding Path=MainViewModel, Source={StaticResource ViewModelLocator}}">
     <Grid>
-        
+        <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <Label Content="Files managed:"></Label>
+                <Label Content="{Binding FileNodeControlViewModels.Count}"/>
+            </StackPanel>
+            <ItemsControl ItemsSource="{Binding FileNodeControlViewModels}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <controls:FileNodeControl DataContext="{Binding}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
     </Grid>
 </Window>
