--- a/Curator/Controls/FileNodeControl.xaml
+++ b/Curator/Controls/FileNodeControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Curator.Controls"
+             xmlns:local="clr-namespace:Curator.Controls"             
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -14,7 +14,15 @@
                 <Label Content="("/>
                 <Label Content="{Binding Node.LogEntries.Count}"/>
                 <Label Content="Entries )"/>
+                
             </StackPanel>
+            <ItemsControl ItemsSource="{Binding LogEntryViewModels}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <local:LogEntryControl DataContext="{Binding}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </StackPanel>
     </Grid>
 </UserControl>
