--- a/Curator/Controls/LogEntryControl.xaml
+++ b/Curator/Controls/LogEntryControl.xaml
@@ -7,9 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Text="{Binding CreatedAt, StringFormat='{}{0:dd/MM/yyyy HH:mm:ss }'}" />
-            <Button Content="Restore" Command="{Binding RestoreCommand}" />
-        </StackPanel>
+        <Border BorderThickness="2" BorderBrush="Transparent">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding CreatedAt, StringFormat='{}{0:dd/MM/yyyy HH:mm:ss }'}" />
+                <Button Content="Restore" Command="{Binding RestoreCommand}" />
+            </StackPanel>
+        </Border>
     </Grid>
 </UserControl>
