gui extended; curated files directory can now be opened via gui; archive path changed to %appdata% due to possible issues; some stuff renamed to reflect recent changes

--- a/Curator/Controls/FileNodeControl.xaml
+++ b/Curator/Controls/FileNodeControl.xaml
@@ -14,7 +14,7 @@
                 <Label Content="("/>
                 <Label Content="{Binding Node.LogEntries.Count}"/>
                 <Label Content="Entries )"/>
-                
+                <Button Content="Open Directory" Command="{Binding OpenDirectoryCommand}"/>
             </StackPanel>
             <ItemsControl ItemsSource="{Binding LogEntryViewModels}">
                 <ItemsControl.ItemTemplate>
